<resources>
    <string name="app_name">Happy Charlie</string>
    <string name="title_activity_inicio">Happy Charlie</string>
    <string name="bienvenida">Bienvenid@</string>
    <string name="image">gif mano</string>
    <string name="tocar">Toca para continuar</string>
    <string name="salir">boton_salir</string>
    <string name="ruido">boton_ruido</string>
    <string name="musica">boton_musica</string>
    <string name="meditacion">boton_meditacion</string>
    <string name="mensajes">boton_mensajes</string>
    <string name="calculadora">boton_calculadora</string>
    <string name="title_activity_lobby">lobby</string>
    <string name="pug">Charlie</string>
    <string name="title_activity_animo">animo</string>
    <string name="iboton_atras">atras</string>
    <string name="Mns">Mensaje</string>
    <string name="B">B</string>
    <string name="Imag">Informacion</string>
    <string name="configuracion">configuracion</string>
    <string name="globo_imagen">globo_imagen</string>
    <string name="mensaje_de_animo">mensaje_de_animo</string>
    <string name="msj_lobby">En que puedo ayudarte?</string>
    <string name="msj_principal">el mensaje de animo irá aquí</string>
    <string name="globo_imagen_msj">globo_imagen_msj</string>
    <string name="title_activity_ruido">ruido</string>
    <string name="title_activity_musica">musica</string>
    <string name="title_activity_meditacion">meditacion</string>
    <string name="title_activity_calculadora">calculadora</string>
    <string name="title_activity_configuracion">configuracion</string>
    <string name="title_activity_popupTempo">Popup</string>
    <string name="title_activity_menuemergentefondo">mefondo</string>
    <string name="title_activity_menuemergentecolores">menuecolores</string>
    <string name="title_activity_menuemergentefuentes">menuefuentes</string>
    <string name="imaBTempo">btnTempo</string>
    <string name="guia_para_principiantes">Meditación sencilla</string>
    <string name="guia_relajacion">Relajar cuerpo y mente</string>
    <string name="guia_paz">Paz interior</string>
    <string name="title_activity_rep_meditacion">repMeditacion</string>
    <string name="petViewDesc">Imagen de la mascota</string>
    <string name="meditacion1">Una pequeña guía de meditación ideal para principiantes o cuando no se tiene mucho tiempo a disposición.</string>
    <string name="meditacion2">¿Sientes stress o cansancio? ¿No puedes encontrar una forma de calmarte? Esta guía debería ayudarte con tu problema,
        solo relajate y deja de pensar por un tiempo.</string>
    <string name="meditacion3">Para meditadores experimentados, ya sabes los beneficios de meditar sin embargo por que parar con solo relajarse cuando
        puedes ir más allá y lograr una paz que cambie tu vida.</string>
    <string name="MenuMusica">tituloCancion</string>
    <string name="walking_on_sunshine">walking_on_sunshine</string>
    <string name="windIcon">Icono viento</string>
    <string name="waterfallIcon">Icono Cascada</string>
    <string name="forestIcon">Icono bosque</string>
    <string name="seaIcon">Icono Mar</string>
    <string name="rainIcon">Icono lluvia</string>
    <string name="fireIcon">Icono Fuego</string>
    <string name="playIcon">Botón de Reproduccion </string>
    <string name="pauseIcon">Botón de Pausa</string>
    <string name="volumeOn">Botón Volumen ON</string>
    <string name="volumeOff">Botón Volumen OFF</string>
    <string name="timerIcon">Botón del Temporizador</string>
    <string name="botonOne">15 Min</string>
    <string name="botonTwo">30 Min</string>
    <string name="botonThree">1 hora</string>
    <string name="botonFour">3 horas</string>
    <string name="BSL">Musica</string>
    <string name="BM1">Musica 1</string>
    <string name="BM2">Musica 2</string>
    <string name="BM3">Musica 3</string>
    <string name="TV">NOMBRE DE LA CANCION</string>
    <string name="IV">DESCRIPCION</string>
    <string name="continueIcon">Botón de reanudar</string>
    <string name="temp">00:00</string>
    <string name="botonCL">Cambiar color del texto</string>
    <string name="botonFT">Cambiar fuente del sistema</string>
    <string name="botonBG">Cambiar fondo de pantalla</string>
    <string name="imageBtnbg1">bg1</string>
    <string name="imageBtnbg2">bg2</string>
    <string name="imageBtnbg3">bg3</string>
    <string name="fuente1"> • Merriweather</string>
    <string name="fuente2"> • Raleway</string>

</resources>
