<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".lobby"
    tools:showIn="@layout/activity_lobby">


    <ImageButton
        android:id="@+id/charlie"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pug"
        android:onClick="cambioEmocion"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pug1" />

    <ImageButton
        android:id="@+id/btnRuido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ruido"
        android:onClick="pantallaRuido"
        app:layout_constraintBottom_toTopOf="@id/btnMeditacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charlie"
        app:srcCompat="@drawable/ruido" />

    <ImageButton
        android:id="@+id/btnMusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/musica"
        android:onClick="pantallaMusica"
        app:layout_constraintBottom_toTopOf="@id/btnAnimo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charlie"
        app:srcCompat="@drawable/musica" />

    <ImageButton
        android:id="@+id/btnMeditacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="244dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/meditacion"
        android:onClick="pantallaMeditacion"
        app:layout_constraintBottom_toTopOf="@id/btnCalculadora"
        app:layout_constraintTop_toBottomOf="@+id/btnRuido"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/meditacion" />

    <ImageButton
        android:id="@+id/btnAnimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/mensajes"
        android:onClick="pantallaAnimo"
        app:layout_constraintBottom_toTopOf="@id/btnConfiguracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMusica"
        app:srcCompat="@drawable/animo" />

    <ImageButton
        android:id="@+id/btnCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="244dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calculadora"
        android:onClick="pantallaCalculadora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMeditacion"
        app:srcCompat="@drawable/calculadora" />

    <ImageButton
        android:id="@+id/btnConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/configuracion"
        android:text="@string/configuracion"
        android:visibility="visible"
        android:onClick="pantallaConfiguracion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnimo"
        app:srcCompat="@drawable/configuracion" />


</androidx.constraintlayout.widget.ConstraintLayout>
