<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".animo"
    tools:showIn="@layout/activity_animo">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/globo_imagen_msj"
        app:layout_constraintBottom_toTopOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton"
        app:layout_constraintVertical_bias="0.373"
        app:srcCompat="@drawable/clod" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="194dp"
        android:layout_height="85dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/mensaje_de_animo"
        android:text="@string/msj_principal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/iboton_atras"
        android:focusable="true"
        android:onClick="volverLobby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atras" />

    <ImageButton
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_marginBottom="66dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pug"
        android:onClick="mandarMensaje"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/pug2" />

</androidx.constraintlayout.widget.ConstraintLayout>