<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="95dp"
        android:layout_height="140dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="334dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageBtnbg2"
        android:onClick="setbackground2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        app:srcCompat="@drawable/bg2" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="95dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="333dp"
        android:layout_marginBottom="334dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageBtnbg1"
        android:onClick="setbackground1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        app:srcCompat="@drawable/bg1" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="95dp"
        android:layout_height="140dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="334dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageBtnbg3"
        android:onClick="setbackground3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        app:srcCompat="@drawable/bg3" />

</androidx.constraintlayout.widget.ConstraintLayout>